# docx-rs

./: .gitignore  CHANGELOG.md  CHANGELOG.mf  CONTRIBUTING.md  Cargo.toml  FORK_CHANGES.md  LICENSE  README.md  hello.docx  hello.json  image.docx  makefile  test.json
docx-core/: Cargo.toml  test_xml_reader.rs
docx-core/benches/: read_docx.rs  write_docx.rs
docx-core/bindings/: FontGroup.ts  FontScheme.ts  FontSchemeFont.ts  Theme.ts
docx-core/examples/: alignment.rs  bookmark.rs  comment.rs  custom_property.rs  custom_xml.rs  data_binding.rs  dirty_toc.rs  doc_id.rs  even_header.rs  example.rs  first_header.rs  font.rs  font_size.rs  footer.rs  footnotes.rs  header.rs  header_with_page_num.rs  hello.rs  history.rs  hyperlink.rs  image.rs  image_floating.rs  image_in_header.rs  image_inline.rs  image_inline_rotate.rs  image_reader.rs  indent.rs  nested_comment.rs  numbering.rs  outline_lvl.rs  page_margin.rs  page_size.rs  reader.rs  render.rs  sdt.rs  section.rs  size.rs  style.rs  table.rs  table_border.rs  (+10 more)
docx-core/fixtures/hello_world/: [Content_Types].xml
docx-core/src/: lib.rs  macros.rs
docx-core/src/documents/: bookmark_id.rs  build_xml.rs  comment_id.rs  comments.rs  comments_extended.rs  content_types.rs  custom_item.rs  custom_item_property.rs  custom_item_rels.rs  custom_xml.rs  document.rs  document_rels.rs  document_tree.rs  font_table.rs  footer.rs  footer_id.rs  footer_rels.rs  footnote_id.rs  footnotes.rs  header.rs  header_id.rs  header_rels.rs  history_id.rs  hyperlink_id.rs  image_collector.rs  mod.rs  numberings.rs  paragraph_id.rs  paragraph_property_change_id.rs  pic_id.rs  rels.rs  settings.rs  styles.rs  taskpanes.rs  taskpanes_rels.rs  theme.rs  toc_key.rs  web_settings.rs  webextension.rs  xml_builder.rs  (+2 more)
docx-core/src/errors/: mod.rs
docx-core/src/escape/: mod.rs
docx-core/src/reader/: a_graphic.rs  a_graphic_data.rs  bookmark_end.rs  bookmark_start.rs  cell_margins.rs  comment.rs  comment_extended.rs  comments.rs  comments_extended.rs  custom_properties.rs  delete.rs  div.rs  doc_defaults.rs  doc_grid.rs  document.rs  document_rels.rs  drawing.rs  errors.rs  font_group.rs  font_scheme.rs  footer.rs  frame_property.rs  from_xml.rs  header.rs  header_or_footer_rels.rs  hyperlink.rs  ignore.rs  insert.rs  instr_text.rs  level.rs  level_override.rs  mc_fallback.rs  mod.rs  move_from.rs  move_to.rs  namespace.rs  numbering_property.rs  numberings.rs  page_num_type.rs  paragraph.rs  (+38 more)
docx-core/src/types/: alignment_type.rs  border_position.rs  border_type.rs  break_type.rs  character_spacing_values.rs  doc_grid_type.rs  drawing_position.rs  emu.rs  errors.rs  field_char_type.rs  font_pitch_type.rs  height_rule.rs  hyperlink_type.rs  level_suffix_type.rs  line_spacing_type.rs  mod.rs  page_margin.rs  page_orientation_type.rs  positional_tab_alignment_type.rs  positional_tab_relative_to.rs  relative_from_type.rs  section_type.rs  shd_type.rs  spacing.rs  special_indent_type.rs  style_type.rs  tab_leader_type.rs  tab_value_type.rs  table_alignment_type.rs  table_layout_type.rs  text_alignment_type.rs  text_direction.rs  text_direction_type.rs  theme_color.rs  vert_align_type.rs  vertical_align_type.rs  vertical_merge_type.rs  width_type.rs
docx-core/src/xml/: common.rs  mod.rs  writer.rs
docx-core/src/xml_builder/: comments.rs  comments_extended.rs  core_properties.rs  custom_properties.rs  declaration.rs  document.rs  drawing.rs  elements.rs  fonts.rs  footer.rs  footnotes.rs  header.rs  macros.rs  mod.rs  numbering.rs  pic.rs  properties.rs  relationship.rs  settings.rs  styles.rs
docx-core/src/xml_json/: mod.rs
docx-core/src/zipper/: mod.rs
docx-core/tests/: lib.rs  reader.rs
docx-core/tests/output/: [Content_Types].xml
docx-core/tests/snapshots/: lib__reader__line_spacing.snap  lib__reader__line_spacing.snap.new  lib__reader__read_bom.snap  lib__reader__read_bom.snap.new  lib__reader__read_bookmark.snap  lib__reader__read_bookmark.snap.new  lib__reader__read_comment.snap  lib__reader__read_comment.snap.new  lib__reader__read_comment_in_delete_in_insert.snap  lib__reader__read_decoration.snap  lib__reader__read_decoration.snap.new  lib__reader__read_extended_comment.snap  lib__reader__read_extended_comments.snap  lib__reader__read_extended_comments.snap.new  lib__reader__read_footnotes.snap  lib__reader__read_from_doc.snap  (+44 more)
docx-wasm/: .babelrc.json  Cargo.toml  docx.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.web.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
docx-wasm/assets/: template.html
docx-wasm/bench/: build.js
docx-wasm/example/: index.ts
docx-wasm/export-png/: .gitignore  index.mjs  index.ts  makefile
docx-wasm/js/: abstract-numbering.ts  bookmark-end.ts  bookmark-start.ts  border.ts  break.ts  builder.ts  carriage-return.ts  comment-end.ts  comment.ts  delete-text.ts  delete.ts  doc-defaults.ts  doc-props.ts  docx.ts  footer.ts  header.ts  hyperlink.ts  image.ts  index.ts  insert.ts  json.ts  level.ts  num-pages.ts  numbering.ts  page-num.ts  paragraph-property.ts  paragraph.ts  positional-tab.ts  run-property.ts  run.ts  section-property.ts  settings.ts  shading.ts  style.ts  styles.ts  tab-leader.ts  tab.ts  table-cell-border.ts  table-cell-borders.ts  table-cell.ts  (+7 more)
docx-wasm/pkg/: docx_rs.d.ts  docx_rs.js  docx_rs_bg.d.ts  docx_rs_bg.wasm  index.d.ts  index.js  index_bg.d.ts  index_bg.wasm  package.json
docx-wasm/src/: abstract_numbering.rs  comment.rs  delete.rs  doc.rs  docx.rs  footer.rs  frame_property.rs  header.rs  hyperlink.rs  insert.rs  level.rs  level_override.rs  lib.rs  line_spacing.rs  move_from.rs  move_to.rs  num_pages.rs  numbering.rs  page_margin.rs  page_num.rs  page_num_type.rs  paragraph.rs  paragraph_property.rs  pic.rs  positional_tab.rs  reader.rs  run.rs  run_fonts.rs  run_property.rs  style.rs  table.rs  table_cell.rs  table_cell_border.rs  table_of_contents.rs  table_of_contents_item.rs  table_position_property.rs  table_row.rs  web_extension.rs
docx-wasm/test/: cat.js  encoded-cat.js  index.test.js
(+676 files in other folders)
