[package]
name = "docx-rs"
version = "0.4.20"
authors = ["bokuweb <bokuweb12@gmail.com>"]
repository = "https://github.com/bokuweb/docx-rs"
edition = "2021"
license = "MIT"
license-file = "../LICENSE"
readme = "../README.md"
description = "A .docx file writer with Rust/WebAssembly."
keywords = [
  "office",
  "word",
  "docx",
]

[lib]
name = "docx_rs"
path = "src/lib.rs"

[features]
default = ["image"]
wasm = ["wasm-bindgen", "ts-rs", "image"]
# Convert EMF (Enhanced Metafile) images embedded in a docx to SVG on read,
# via the `emf-core` crate from https://github.com/mythrnr/emf-rs.
emf = ["emf-core", "wmf-core"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.12"
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = {version = "1.0.142" }
base64 = "0.22.1"
image = { version = "0.25.6", default-features = false, features=["gif", "jpeg", "png", "bmp", "tiff"], optional = true }
emf-core = { git = "https://github.com/mythrnr/emf-rs.git", tag = "0.0.5", default-features = false, features = ["svg"], optional = true }
wmf-core = { git = "https://github.com/mythrnr/wmf-rs.git", tag = "0.0.17", default-features = false, features = ["svg"], optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
ts-rs = { version = "6.1", optional = true }
quick-xml = { version = "0.36", default-features = false, features = ["encoding"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
insta = "1.43.1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "read_docx"
harness = false

[[bench]]
name = "write_docx"
harness = false
