[package]
name = "docx-rs"
version = "0.4.21"
authors = ["bokuweb <bokuweb12@gmail.com>"]
repository = "https://github.com/bokuweb/docx-rs"
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "A .docx file writer with Rust/WebAssembly."
keywords = ["office", "word", "docx"]

[lib]
name = "docx_rs"
path = "src/lib.rs"

[features]
default = ["image"]
wasm = ["wasm-bindgen", "ts-rs", "image"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
base64 = "0.22.1"
image = { version = "0.25", default-features = false, features = [
    "gif",
    "jpeg",
    "png",
    "bmp",
    "tiff",
], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
ts-rs = { version = "12.0", optional = true }
quick-xml = { version = "0.41", default-features = false, features = [
    "encoding",
] }

[dev-dependencies]
pretty_assertions = "1.4.1"
insta = "1.48"
criterion = { version = "0.8", default-features = false, features = [
    "cargo_bench_support",
] }

[[bench]]
name = "read_docx"
harness = false

[[bench]]
name = "write_docx"
harness = false
