[package]
name = "docx-wasm"
version = "0.1.0"
authors = ["bokuweb <bokuweb12@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"
docx-rs= { path = "../docx-core", features = ["wasm"] }

[profile.release]
lto = true