[package]
name = "docx-wasm"
version = "0.1.0"
authors = ["bokuweb <bokuweb12@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
docx-rs = { path = "../docx-core", features = ["wasm"] }
emf-core = { git = "https://github.com/mythrnr/emf-rs.git", tag = "0.0.7", default-features = false, features = [
    "svg",
] }
wmf-core = { git = "https://github.com/mythrnr/wmf-rs.git", tag = "0.0.23", default-features = false, features = [
    "svg",
] }
