[package]
name = "docx-wasm"
version = "0.1.0"
authors = ["bokuweb <bokuweb12@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
# Keep Binaryen's stable speed/size optimization level explicit. `-O4` was
# larger and did not produce a repeatable runtime improvement in the Node
# package benchmark.
wasm-opt = ["-O"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
docx-rs = { path = "../docx-core", features = ["wasm"] }
emf-core = { git = "https://github.com/mythrnr/emf-rs.git", tag = "0.0.10", default-features = false, features = [
    "svg",
] }
wmf-core = { git = "https://github.com/mythrnr/wmf-rs.git", tag = "0.0.25", default-features = false, features = [
    "svg",
] }
